--- a/lightread/data/ui/lightread-preferences.ui
+++ b/lightread/data/ui/lightread-preferences.ui
@@ -53,8 +53,8 @@
           <object class="GtkGrid" id="grid1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="row_spacing">3</property>
-            <property name="column_spacing">5</property>
+            <property name="row_spacing">5</property>
+            <property name="column_spacing">10</property>
             <property name="row_homogeneous">True</property>
             <child>
               <object class="GtkCheckButton" id="notifications">
@@ -63,7 +63,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="halign">center</property>
+                <property name="halign">start</property>
                 <property name="use_action_appearance">False</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
@@ -82,7 +82,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="halign">center</property>
+                <property name="halign">start</property>
                 <property name="use_action_appearance">False</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
