--- a/trifle/data/ui/about-dialog.ui
+++ b/trifle/data/ui/about-dialog.ui
@@ -5,16 +5,13 @@
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="type_hint">dialog</property>
-    <property name="program_name">Lightread</property>
-    <property name="version">2.0</property>
-    <property name="copyright" translatable="yes">Copyright © 2012 Caffeinated Code</property>
-    <property name="website">http://caffeinatedco.de/</property>
-    <property name="website_label" translatable="yes">caffeinatedco.de</property>
-    <property name="authors">George Czabania
-Jono Cooper
-Simonas Kazlauskas</property>
-    <property name="logo_icon_name">lightread</property>
-    <property name="license_type">bsd</property>
+    <property name="program_name">Trifle</property>
+    <property name="version">0.5</property>
+    <property name="copyright" translatable="yes">Copyright © 2012 Simonas Kazlauskas</property>
+    <property name="comments" translatable="yes">Google Reader for GNOME</property>
+    <property name="authors">Simonas Kazlauskas</property>
+    <property name="logo_icon_name">trifle</property>
+    <property name="license_type">gpl-2-0</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="aboutdialog-vbox1">
         <property name="can_focus">False</property>
