--- a/trifle/data/ui/feedview/style.css
+++ b/trifle/data/ui/feedview/style.css
@@ -119,7 +119,19 @@ table {
 
 body {
     font-size: 16px;
-    font-family: "Ubuntu Light", "Ubuntu", "Helvetica", "Arial", sans-serif;
+    font-family: "Ubuntu Light",
+                 "Ubuntu",
+                 "Helvetica",
+                 "Arial",
+                 "DejaVu Sans",
+/* WebKit is stupid as hell thus it cannot choose appropriate font for Korean
+ * symbols */
+                 "NanumGothic",
+                 "Baekmuk",
+/* This for Japanese. I didn't have any problems with them tho */
+                 "IPAGothic",
+                 "VL Gothic",
+                 sans-serif;
     margin: 1em auto;
     color: #333333;
     background: #F6F6F6;
