--- a/trifle/data/ui/feedview/style.css
+++ b/trifle/data/ui/feedview/style.css
@@ -1,4 +1,5 @@
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
+article, aside, details, figcaption, figure, footer, header, hgroup, nav,
+section, summary {
     display: block;
 }
 
@@ -17,10 +18,6 @@ audio:not([controls]) {
     display: none;
 }
 
-body {
-    margin: 0;
-}
-
 a:focus {
     outline: thin dotted;
 }
@@ -29,92 +26,8 @@ a:hover, a:active {
     outline: 0;
 }
 
-h1 {
-    font-size: 2em;
-    margin: 0;
-}
-
-h2 {
-    font-size: 1.5em;
-    margin: 0;
-}
-
-h3 {
-    font-size: 1.17em;
-    margin: 0;
-}
-
-h4 {
-    font-size: 1em;
-    margin: 0;
-}
-
-h5 {
-    font-size: 0.83em;
-    margin: 0;
-}
-
-h6 {
-    font-size: 0.75em;
-    margin: 0;
-}
-
 abbr[title] {
     border-bottom: 1px dotted;
-}
-
-b, strong {
-    font-weight: bold;
-}
-
-blockquote {
-    margin: 1em 40px;
-}
-
-dfn {
-    font-style: italic;
-}
-
-pre, code, kbd, samp {
-    font-family: monospace, serif;
-    _font-family: 'courier new', monospace;
-    font-size: 1em;
-}
-
-pre {
-    white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-}
-
-small {
-    font-size: 75%;
-}
-
-sub, sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-
-sup {
-    top: -0.5em;
-}
-
-sub {
-    bottom: -0.25em;
-}
-
-fieldset {
-    border: 1px solid #c0c0c0;
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
 }
 
 body {
@@ -155,9 +68,10 @@ header h1 {
     width: 100%;
     text-align: center;
     line-height: 1em;
+    margin: 0;
 }
 
-#trifle_title {
+#trifle_title:link {
     word-wrap: break-word;
     line-height: 1em;
     display: block;
@@ -185,7 +99,7 @@ header hr {
 /* Content styles */
 #trifle_content * {
     font-family: inherit !important;
-    font-size: inherit !important;
+    font-size: inherit;
 }
 
 #trifle_content h1, #trifle_content h2 {
@@ -222,7 +136,7 @@ header hr {
     max-width: 100%;
 }
 
-#trifle_content a {
+#trifle_content a:link {
     text-decoration: none;
     color: #627AAD;
 }
@@ -231,11 +145,80 @@ header hr {
     text-decoration: underline;
 }
 
-#trifle_content code, #trifle_content pre {
-    font-family: monospace !important;
-    word-wrap: normal;
-    white-space: pre;
+#trifle_content pre, #trifle_content code, #trifle_content kbd,
+#trifle_content samp {
+    font-family: monospace, serif !important;
+    _font-family: 'courier new', monospace !important;
+    font-size: 1em;
+}
+
+#trifle_content pre {
     width: 100%;
+    white-space: pre;
+    word-wrap: normal;
     overflow: auto;
     font-size: 0.85em !important;
+}
+
+#trifle_content tr {
+    border: 1px solid #E8E8E8;
+    border-bottom: none;
+    border-left: none;
+}
+
+#trifle_content tr:nth-child(odd) {
+    background: #F3F3F3;
+}
+
+#trifle_content td, #trifle_content th {
+    border-left: 1px solid #E8E8E8 !important;
+    padding: .25em .5em !important;
+}
+
+#trifle_content th {
+    font-weight: bold !important;
+}
+
+#trifle_content table {
+    border-bottom: 1px solid #E8E8E8;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+#trifle_content b, #trifle_content strong {
+    font-weight: bold !important;
+}
+
+#trifle_content blockquote {
+    margin: 1em 40px;
+}
+
+#trifle_content dfn {
+    font-style: italic;
+}
+
+
+#trifle_content small {
+    font-size: 75%;
+}
+
+#trifle_content sub, sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+
+#trifle_content sup {
+    top: -0.5em;
+}
+
+#trifle_content sub {
+    bottom: -0.25em;
+}
+
+#trifle_content fieldset {
+    border: 1px solid #c0c0c0;
+    margin: 0 2px;
+    padding: 0.35em 0.625em 0.75em;
 }
