--- a/trifle/data/ui/window.ui
+++ b/trifle/data/ui/window.ui
@@ -3,6 +3,8 @@
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkApplicationWindow" id="main-window">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Feeds</property>
+    <property name="hide_titlebar_when_maximized">True</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
