--- a/trifle/data/ui/about-dialog.ui
+++ b/trifle/data/ui/about-dialog.ui
@@ -5,8 +5,7 @@
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="type_hint">dialog</property>
-    <property name="program_name">Feeds</property>
-    <property name="version">0.5</property>
+    <property name="program_name" translatable="yes">Feeds</property>
     <property name="copyright" translatable="yes">Copyright © 2012 Simonas Kazlauskas</property>
     <property name="comments" translatable="yes">Google Reader for GNOME</property>
     <property name="authors">Simonas Kazlauskas</property>
