--- a/trifle/data/ui/window.ui
+++ b/trifle/data/ui/window.ui
@@ -5,6 +5,7 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Feeds</property>
     <property name="hide_titlebar_when_maximized">True</property>
+    <property name="icon_name">trifle</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
