--- a/trifle/data/ui/about-dialog.ui
+++ b/trifle/data/ui/about-dialog.ui
@@ -4,6 +4,7 @@
   <object class="GtkAboutDialog" id="about-dialog">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
+    <property name="title" translatable="yes">About Feeds</property>
     <property name="type_hint">dialog</property>
     <property name="program_name" translatable="yes">Feeds</property>
     <property name="copyright" translatable="yes">Copyright © 2012 Simonas Kazlauskas</property>
