--- a/trifle/data/ui/preferences-dialog.ui
+++ b/trifle/data/ui/preferences-dialog.ui
@@ -11,6 +11,7 @@
   <object class="GtkDialog" id="preferences-dialog">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
+    <property name="title" translatable="yes">Preferences</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
@@ -28,11 +29,9 @@
             <child>
               <object class="GtkButton" id="OK">
                 <property name="label">gtk-ok</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -59,12 +58,10 @@
             <child>
               <object class="GtkCheckButton" id="notifications">
                 <property name="label" translatable="yes">Show notifications</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
                 <property name="halign">start</property>
-                <property name="use_action_appearance">False</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
               </object>
@@ -78,12 +75,10 @@
             <child>
               <object class="GtkCheckButton" id="start-refresh">
                 <property name="label" translatable="yes">Refresh on startup</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
                 <property name="halign">start</property>
-                <property name="use_action_appearance">False</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
               </object>
