--- a/trifle/data/ui/subscribe-dialog.ui
+++ b/trifle/data/ui/subscribe-dialog.ui
@@ -5,7 +5,7 @@
     <property name="width_request">300</property>
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">Subscribe to URL</property>
+    <property name="title" translatable="yes">Subscribe to a feed</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="default_width">300</property>
@@ -24,11 +24,9 @@
             <child>
               <object class="GtkButton" id="close">
                 <property name="label">gtk-cancel</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
                 <property name="image_position">right</property>
               </object>
@@ -42,11 +40,9 @@
             <child>
               <object class="GtkButton" id="subscribe">
                 <property name="label">gtk-ok</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
