--- a/trifle/data/ui/app-menu.ui
+++ b/trifle/data/ui/app-menu.ui
@@ -4,6 +4,16 @@
     <menu id="app-menu">
         <section>
             <item>
+                <attribute name="action">app.subscribe</attribute>
+                <attribute name="label" translatable="yes">_Subscribe a feed</attribute>
+            </item>
+            <item>
+                <attribute name="action">app.synchronize</attribute>
+                <attribute name="label" translatable="yes">_Synchronize</attribute>
+            </item>
+        </section>
+        <section>
+            <item>
                 <attribute name="action">app.preferences</attribute>
                 <attribute name="label" translatable="yes">Prefere_nces</attribute>
             </item>
