--- a/trifle/data/ui/feedview/style.css
+++ b/trifle/data/ui/feedview/style.css
@@ -31,21 +31,8 @@ abbr[title] {
 }
 
 body {
-    font-family: "Ubuntu Light",
-                 "Ubuntu",
-                 "Helvetica",
-                 "Arial",
-                 "DejaVu Sans",
-/* WebKit is stupid as hell thus it cannot choose appropriate font for Korean
- * symbols */
-                 "NanumGothic",
-                 "Baekmuk",
-/* This for Japanese. I didn't have any problems with them tho */
-                 "IPAGothic",
-                 "VL Gothic",
-                 sans-serif;
-    margin: 1em auto 1.5em;
-    line-height: 1.5em;
+    margin: 1em;
+    line-height: 1.4em;
 }
 
 #trifle_replacements {
@@ -53,19 +40,13 @@ body {
 }
 
 article {
-    font-size: 1.25em;
-    width: 95%;
-    max-width: 1000px;
-    margin: 0 auto;
     display: block;
-    padding: 0 2.5%;
     overflow: hidden;
 }
 
 /* Content styles */
-* {
-    font-family: inherit !important;
-    font-size: inherit;
+p {
+    margin: 0 0 1em 0;
 }
 
 h1, h2 {
@@ -109,12 +90,6 @@ img {
 
 *:link:hover {
     text-decoration: underline;
-}
-
-pre, code, kbd, samp {
-    font-family: monospace, serif !important;
-    _font-family: 'courier new', monospace !important;
-    font-size: 1em;
 }
 
 pre {
